# magician

./: .gitignore  CMakeLists.txt  README.md  test_delegate.cpp  test_traits.cpp  traits.hpp
magician/: delegate.hpp  static_reflection.hpp  traits.hpp  traits_cxx11.hpp  trivial_type_traits.h
tests/: test_delegate.cpp  test_static_reflection.cpp  test_traits.cpp  test_traits_cxx11.cpp  test_trivial_type_traits.cpp
